@@ -1,3 +1,9 @@
+2010-07-06  Romain Francois <romain@r-enthusiasts.com>
+
+	* inst/include/Rcpp/sugar/functions/ifelse.h: using compile time dispatch 
+	based on the NA-ness of the condition type. ifelse handles primitive
+	arguments on the lhs, rhs or both
+
 2010-07-05  Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/Rcpp/RcppCommon.h : no more using variadic macros in RCPP_DEBUG
@@ -23,8 +29,8 @@
 	* inst/include/Rcpp/sugar/matrix/upper_tri.h: new sugar function: upper_tri
 
 	* inst/include/Rcpp/sugar/functions/rep.h: new sugar function : rep
-	* inst/include/Rcpp/sugar/functions/rep.h: new sugar function : rep_len
-	* inst/include/Rcpp/sugar/functions/rep.h: new sugar function : rep_each
+	* inst/include/Rcpp/sugar/functions/rep_len.h: new sugar function : rep_len
+	* inst/include/Rcpp/sugar/functions/rep_each.h: new sugar function : rep_each
 	
 2010-07-02  Dirk Eddelbuettel  <edd@debian.org>
 
